fix responsive issues

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans"
     />
-    <link rel="stylesheet" href="style.css" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ed Adkins</title>
   </head>
   <body>
@@ -16,7 +15,7 @@
         <div class="nav-logo"></div>
         <div class="nav-links">
           <a class="nav-link" href="#about">About</a>
-          <a class="nav-link" href="#contact">Contact</a>
+          <!-- <a class="nav-link" href="#contact">Contact</a> -->
           <a class="nav-link" href="#my-focus">My Focus</a>
         </div>
       </nav>
@@ -112,45 +111,51 @@
       <div class="my-work-container">
         <div class="my-work-spec">
           <img src="images/js.png" />
-          <h3>Frontend</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut
-          </p>
-          <h4>Languages I speak:</h4>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>React</li>
-          </ul>
+          <div class="my-work-card">
+            <h3>Frontend</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut
+            </p>
+            <h4>Languages I speak:</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>React</li>
+            </ul>
+          </div>
         </div>
         <div class="my-work-spec">
           <img src="images/js.png" />
-          <h3>Backend</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut
-          </p>
-          <h4>Languages I speak:</h4>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>React</li>
-          </ul>
+          <div class="my-work-card">
+            <h3>Backend</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut
+            </p>
+            <h4>Languages I speak:</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>React</li>
+            </ul>
+          </div>
         </div>
         <div class="my-work-spec">
           <img src="images/js.png" />
-          <h3>Cloud</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut
-          </p>
-          <h4>Languages I speak:</h4>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>React</li>
-          </ul>
+          <div class="my-work-card">
+            <h3>Cloud</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut
+            </p>
+            <h4>Languages I speak:</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>React</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
